[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/game_scene.gd" type="Script" id=1]
[ext_resource path="res://tiles/game-tileset.tres" type="TileSet" id=2]
[ext_resource path="res://icons/icon_save.png" type="Texture" id=3]
[ext_resource path="res://images/clock.png" type="Texture" id=4]
[ext_resource path="res://images/clock_min.png" type="Texture" id=5]
[ext_resource path="res://images/clock_hour.png" type="Texture" id=6]
[ext_resource path="res://fonts/cabin.fnt" type="BitmapFont" id=7]
[ext_resource path="res://sounds/pop-6.wav" type="Sample" id=8]
[ext_resource path="res://fonts/teen-bold-italic.fnt" type="BitmapFont" id=9]
[ext_resource path="res://fonts/teen-italic.fnt" type="BitmapFont" id=10]
[ext_resource path="res://fonts/teen-bold.fnt" type="BitmapFont" id=11]
[ext_resource path="res://fonts/teen.fnt" type="BitmapFont" id=12]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SampleLibrary" id=2]

samples/pop-6 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 8 ) }

[node name="Root" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="GameSession" type="GameSession" parent="."]

[node name="GameMap" type="GameMap" parent="GameSession"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
alignment = 0

[node name="DayNightMapMask" type="CanvasModulate" parent="GameSession/GameMap"]

color = Color( 1, 1, 1, 1 )

[node name="GroundMap" type="TileMap" parent="GameSession/GameMap"]

z/z = 10
mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 48, 48 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="Camera2D" type="Camera2D" parent="GameSession/GameMap/GroundMap"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = 0
limit/right = 0
limit/bottom = 0
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 4.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0

[node name="FloorMap" type="TileMap" parent="GameSession/GameMap/GroundMap"]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 48, 48 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="ObjectMap" type="TileMap" parent="GameSession/GameMap/GroundMap/FloorMap"]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 48, 48 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = true
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="RigidBody2D" type="RigidBody2D" parent="GameSession/GameMap/GroundMap/FloorMap"]

transform/pos = Vector2( 950, 200 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.89335, 0, 0, 1.82659, -0.319902, -1.05052 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="Sprite" type="Sprite" parent="GameSession/GameMap/GroundMap/FloorMap/RigidBody2D"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameSession/GameMap/GroundMap/FloorMap/RigidBody2D"]

transform/pos = Vector2( -0.319902, -1.05052 )
transform/scale = Vector2( 1.89335, 1.82659 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Hud" type="Hud" parent="GameSession/GameMap"]

layer = 20
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="ControlPane" type="Container" parent="GameSession/GameMap/Hud"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0

[node name="MapControl" type="MapControl" parent="GameSession/GameMap/Hud/ControlPane"]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 1920, 1080 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = 3.0
margin/right = 3.0
margin/bottom = -3.0

[node name="SelectorCost" type="Label" parent="GameSession/GameMap/Hud/ControlPane/MapControl"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SelectorWidth" type="Label" parent="GameSession/GameMap/Hud/ControlPane/MapControl"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SelectorHeight" type="Label" parent="GameSession/GameMap/Hud/ControlPane/MapControl"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SaveSprite" type="Sprite" parent="GameSession/GameMap/Hud/ControlPane/MapControl"]

visibility/visible = false
transform/pos = Vector2( 1742.96, 75.8702 )
texture = ExtResource( 3 )

[node name="DayLabel" type="Label" parent="GameSession/GameMap/Hud/ControlPane"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = 20.0
margin/right = -10.0
margin/bottom = 34.0
text = "[DayLabelText]"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DayPanel" type="Panel" parent="GameSession/GameMap/Hud/ControlPane/DayLabel"]

visibility/behind_parent = true
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = -13.0
margin/right = -30.0
margin/bottom = 27.0

[node name="MoneyLabel" type="Label" parent="GameSession/GameMap/Hud/ControlPane/DayLabel"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -119.5
margin/top = 0.0
margin/right = -231.5
margin/bottom = 0.0
text = "[MoneyLabelText]"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MoneyPanel" type="Panel" parent="GameSession/GameMap/Hud/ControlPane/DayLabel/MoneyLabel"]

visibility/behind_parent = true
material/use_parent = true
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -20.0
margin/top = -13.0
margin/right = -20.0
margin/bottom = 27.0

[node name="ClockLabel" type="Label" parent="GameSession/GameMap/Hud/ControlPane"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1766.0
margin/top = 31.0
margin/right = 78.0
margin/bottom = 45.0
text = "[ClockLabel]"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Clock" type="Clock" parent="GameSession/GameMap/Hud/ControlPane"]

transform/pos = Vector2( 1794.17, 128.489 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="ClockHour" type="Sprite" parent="GameSession/GameMap/Hud/ControlPane/Clock"]

texture = ExtResource( 5 )

[node name="ClockMin" type="Sprite" parent="GameSession/GameMap/Hud/ControlPane/Clock"]

texture = ExtResource( 6 )

[node name="ClockSpeed1" type="HMButton" parent="GameSession/GameMap/Hud/ControlPane/Clock"]

rect/scale = Vector2( 4, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -251.0
margin/top = 351.0
margin/right = -224.0
margin/bottom = 373.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "x1"
flat = false

[node name="ClockSpeed2" type="HMButton" parent="GameSession/GameMap/Hud/ControlPane/Clock/ClockSpeed1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 46.0
margin/top = 0.0
margin/right = 74.0
margin/bottom = 22.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "x2"
flat = false

[node name="ClockSpeedPause" type="HMButton" parent="GameSession/GameMap/Hud/ControlPane/Clock/ClockSpeed1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -48.0
margin/top = 0.0
margin/right = -20.0
margin/bottom = 22.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "="
flat = false

[node name="ClockSpeed3" type="HMButton" parent="GameSession/GameMap/Hud/ControlPane/Clock/ClockSpeed1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 93.0
margin/top = 0.0
margin/right = 121.0
margin/bottom = 22.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "x3"
flat = false

[node name="ClockSpeed5" type="HMButton" parent="GameSession/GameMap/Hud/ControlPane/Clock/ClockSpeed1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 144.0
margin/top = 0.0
margin/right = 173.0
margin/bottom = 22.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "x5"
flat = false

[node name="MissionPanel" type="Panel" parent="GameSession/GameMap/Hud/ControlPane"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1675.0
margin/top = 284.0
margin/right = 1914.0
margin/bottom = 417.0

[node name="MissionTitleLabel" type="Label" parent="GameSession/GameMap/Hud/ControlPane/MissionPanel"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 10.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "Missions"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MissionContainer" type="VBoxContainer" parent="GameSession/GameMap/Hud/ControlPane/MissionPanel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 30.0
margin/right = 10.0
margin/bottom = 10.0
alignment = 0

[node name="ControlPane_Bottom" type="Container" parent="GameSession/GameMap/Hud"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 1000.0
margin/right = 1920.0
margin/bottom = 1080.0

[node name="AchievementPopup" type="PopupPanel" parent="GameSession/GameMap/Hud"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 390.0
margin/top = 219.0
margin/right = 809.0
margin/bottom = 881.0
popup/exclusive = false

[node name="APLabel" type="Label" parent="GameSession/GameMap/Hud/AchievementPopup"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 163.0
margin/top = 7.0
margin/right = 276.0
margin/bottom = 35.0
custom_fonts/font = ExtResource( 7 )
text = "Achievements"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="APButton" type="Button" parent="GameSession/GameMap/Hud/AchievementPopup"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 356.0
margin/top = 631.0
margin/right = 409.0
margin/bottom = 651.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Close"
flat = false

[node name="ScrollContainer" type="ScrollContainer" parent="GameSession/GameMap/Hud/AchievementPopup"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 37.0
margin/right = 399.0
margin/bottom = 614.0
scroll/horizontal = true
scroll/vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="GameSession/GameMap/Hud/AchievementPopup/ScrollContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="MapSoundPlayer" type="SamplePlayer" parent="GameSession"]

config/polyphony = 1
config/samples = SubResource( 2 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="MainMenuLayer" type="CanvasLayer" parent="."]

process/pause_mode = 2
layer = 100
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="GameMainMenu" type="Panel" parent="MainMenuLayer"]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.9
material/use_parent = true
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 250.0
margin/right = -200.0
margin/bottom = -180.0

[node name="ResumeButton" type="HMButton" parent="MainMenuLayer/GameMainMenu"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 64.0
margin/right = 80.0
margin/bottom = 94.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Resume"
flat = false

[node name="SaveButton" type="HMButton" parent="MainMenuLayer/GameMainMenu/ResumeButton"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 80.0
margin/right = 0.0
margin/bottom = 110.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Save"
flat = false

[node name="OptionsButton" type="HMButton" parent="MainMenuLayer/GameMainMenu/ResumeButton"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 120.0
margin/right = 0.0
margin/bottom = 150.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false

[node name="LeaveGameButton" type="HMButton" parent="MainMenuLayer/GameMainMenu/ResumeButton"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 200.0
margin/right = 0.0
margin/bottom = 230.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Leave game"
flat = false

[node name="SaveLeaveButton" type="HMButton" parent="MainMenuLayer/GameMainMenu/ResumeButton"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 240.0
margin/right = 0.0
margin/bottom = 270.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Save & Leave game"
flat = false

[node name="SaveMenu" type="Panel" parent="MainMenuLayer"]

visibility/opacity = 0.9
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 360.0
margin/top = 240.0
margin/right = -360.0
margin/bottom = -240.0

[node name="SaveDetailPanel" type="Panel" parent="MainMenuLayer/SaveMenu"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 50.0
margin/right = 50.0
margin/bottom = 250.0

[node name="MoneyLabel" type="Label" parent="MainMenuLayer/SaveMenu/SaveDetailPanel"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 5.0
margin/right = 51.0
margin/bottom = 14.0
text = "Money :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MoneyValueLabel" type="Label" parent="MainMenuLayer/SaveMenu/SaveDetailPanel/MoneyLabel"]

anchor/left = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -10.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DateValueLabel" type="Label" parent="MainMenuLayer/SaveMenu/SaveDetailPanel/MoneyLabel/MoneyValueLabel"]

anchor/top = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -10.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DateLabel" type="Label" parent="MainMenuLayer/SaveMenu/SaveDetailPanel/MoneyLabel"]

anchor/top = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -10.0
margin/right = 40.0
margin/bottom = 14.0
text = "Date :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NewSaveButton" type="Button" parent="MainMenuLayer/SaveMenu/SaveDetailPanel"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 230.0
margin/top = -50.0
margin/right = 0.0
margin/bottom = -80.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "New Save"
flat = false

[node name="NameSaveEdit" type="LineEdit" parent="MainMenuLayer/SaveMenu/SaveDetailPanel/NewSaveButton"]

anchor/left = 1
anchor/top = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 37.0
margin/right = -20.0
margin/bottom = 7.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Label" type="Label" parent="MainMenuLayer/SaveMenu/SaveDetailPanel/NewSaveButton/NameSaveEdit"]

anchor/top = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 70.0
margin/right = 51.0
margin/bottom = -30.0
text = "Name :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TitleLabel" type="Label" parent="MainMenuLayer/SaveMenu"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 60.0
margin/top = 10.0
margin/right = -40.0
margin/bottom = 24.0
text = "Save"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SaveList" type="ItemList" parent="MainMenuLayer/SaveMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 50.0
margin/right = 250.0
margin/bottom = 400.0

[node name="BackButton" type="HMButton" parent="MainMenuLayer/SaveMenu"]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 60.0
margin/right = 150.0
margin/bottom = 20.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="OverWriteConfirmDialog" type="ConfirmationDialog" parent="MainMenuLayer/SaveMenu"]

visibility/visible = false
anchor/left = 3
anchor/top = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 62.0
margin/top = 29.0
margin/right = 0.0
margin/bottom = 0.0
popup/exclusive = false
window/title = "Please confirm"
dialog/text = "Overwrite Save \?"
dialog/hide_on_ok = true

[node name="Console" type="Console" parent="MainMenuLayer"]

visibility/visible = false
visibility/opacity = 0.7
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 522.0

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenuLayer/Console"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 10.0
margin/right = 100.0
margin/bottom = 40.0
custom_fonts/bold_italics_font = ExtResource( 9 )
custom_fonts/italics_font = ExtResource( 10 )
custom_fonts/bold_font = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 12 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1

[node name="ConsoleLineEdit" type="LineEdit" parent="MainMenuLayer/Console"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 30.0
margin/right = 150.0
margin/bottom = 5.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="SendCommandButton" type="Button" parent="MainMenuLayer/Console/ConsoleLineEdit"]

anchor/left = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -7.0
margin/top = 0.0
margin/right = 1720.0
margin/bottom = 24.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Send"
flat = false

[connection signal="input_event" from="GameSession/GameMap" to="GameSession/GameMap" method="_on_input_event"]

[connection signal="mouse_enter" from="GameSession/GameMap" to="GameSession/GameMap" method="_canvas_mouse_enter"]

[connection signal="mouse_exit" from="GameSession/GameMap" to="GameSession/GameMap" method="_canvas_mouse_exit"]

[connection signal="input_event" from="GameSession/GameMap/Hud/ControlPane/MapControl" to="GameSession/GameMap" method="_on_input_event"]

[connection signal="pressed" from="GameSession/GameMap/Hud/ControlPane/Clock/ClockSpeed1" to="." method="_on_ClockSpeed1_pressed"]

[connection signal="pressed" from="GameSession/GameMap/Hud/ControlPane/Clock/ClockSpeed1/ClockSpeed2" to="." method="_on_ClockSpeed2_pressed"]

[connection signal="pressed" from="GameSession/GameMap/Hud/ControlPane/Clock/ClockSpeed1/ClockSpeedPause" to="." method="_on_ClockSpeedPause_pressed"]

[connection signal="pressed" from="GameSession/GameMap/Hud/ControlPane/Clock/ClockSpeed1/ClockSpeed3" to="." method="_on_ClockSpeed3_pressed"]

[connection signal="pressed" from="GameSession/GameMap/Hud/ControlPane/Clock/ClockSpeed1/ClockSpeed5" to="." method="_on_ClockSpeed5_pressed"]

[connection signal="pressed" from="GameSession/GameMap/Hud/AchievementPopup/APButton" to="." method="_on_APButton_pressed"]

[connection signal="released" from="GameSession/GameMap/Hud/AchievementPopup/APButton" to="." method="_on_APButton_released"]

[connection signal="released" from="MainMenuLayer/GameMainMenu/ResumeButton" to="." method="_hide_game_menu"]

[connection signal="released" from="MainMenuLayer/GameMainMenu/ResumeButton/SaveButton" to="." method="_on_SaveButton_released"]

[connection signal="released" from="MainMenuLayer/GameMainMenu/ResumeButton/LeaveGameButton" to="." method="_on_LeaveGameButton_released"]

[connection signal="released" from="MainMenuLayer/GameMainMenu/ResumeButton/SaveLeaveButton" to="." method="_on_SaveLeaveButton_released"]

[connection signal="released" from="MainMenuLayer/SaveMenu/SaveDetailPanel/NewSaveButton" to="." method="_on_NewSaveButton_released"]

[connection signal="item_activated" from="MainMenuLayer/SaveMenu/SaveList" to="." method="_on_SaveList_item_activated"]

[connection signal="item_selected" from="MainMenuLayer/SaveMenu/SaveList" to="." method="_on_SaveList_item_selected"]

[connection signal="released" from="MainMenuLayer/SaveMenu/BackButton" to="." method="_on_BackButton_released"]

[connection signal="confirmed" from="MainMenuLayer/SaveMenu/OverWriteConfirmDialog" to="." method="save"]

[connection signal="text_entered" from="MainMenuLayer/Console/ConsoleLineEdit" to="." method="_on_ConsoleLineEdit_text_entered"]

[connection signal="released" from="MainMenuLayer/Console/ConsoleLineEdit/SendCommandButton" to="." method="_on_SendCommandButton_released"]


